--- a/src/components/Market/styles.module.scss
+++ b/src/components/Market/styles.module.scss
@@ -10,7 +10,7 @@
     z-index: 12;
 
     & .marketContainer {
-        width: 75%;
+        width: calc(99% - 400px);
 
         & .controlsContainer {
             display: flex;
