--- a/src/theme/palette.scss
+++ b/src/theme/palette.scss
@@ -1,5 +1,28 @@
 //* Color Palette
 
+$paletteWhite: #ffffff;
+
+$paletteGrey1: #1c1c1c;
+$paletteGrey2: #292929;
+$paletteGrey3: #5a5a5a;
+
+$paletteGreen1: #3b8c41;
+$paletteGreen2: #49ae51;
+
+//>>
+//>>
+//>>
+//>>
+//>>
+//>>
+//>>
+//>>
+//>>
+//>>
+//>>
+//>>
+//______OLD PALETTE__________
+
 $primaryGreen: #00ee7a;
 $primaryGrey: #231f20;
 
