--- a/src/components/LabeledInput/styles.module.scss
+++ b/src/components/LabeledInput/styles.module.scss
@@ -1,25 +1,23 @@
 @import '../../theme/palette.scss';
 
 .div {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    width: 80%;
-    // height: 3rem;
-    margin: 0.7rem auto;
+    // width: 80%;
+    margin: 0.3rem auto;
 
     & .span {
-        color: #fff;
+        color: $paletteWhite;
         margin: 0 0 5px 1rem;
+        font-size: 0.8rem;
     }
 
     & .input {
-        padding: 0.4rem 2rem;
+        margin: auto;
         width: 100%;
-        background: transparent;
-        color: #fff;
-        font-size: 1.5rem;
-        border: 1px solid #fff;
-        border-radius: 5px;
+        padding: 1rem 2rem;
+        background: $paletteGrey1;
+        color: $paletteGrey3;
+        font-size: 0.8rem;
+        border: none;
+        border-radius: 4px;
     }
 }
