--- a/src/components/Registration/styles.module.scss
+++ b/src/components/Registration/styles.module.scss
@@ -1,74 +1,42 @@
 @import '../../theme/palette.scss';
 
 .container {
-    opacity: 0;
+    position: relative;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
 
-    & .img {
-        position: absolute;
-        left: 50%;
-        top: -27%;
-        transform: translate(-50%) scale(0.15);
+    width: 70%;
+
+    & .title {
+        margin-left: -2rem;
+
+        & img {
+            cursor: pointer;
+            margin-right: 1rem;
+
+            /* fucking svg has fucking few px bottom fucking padding */
+            position: relative;
+            top: 0.2rem;
+        }
     }
 
-    & .form {
-        width: 80%;
-        margin: 7rem auto 3rem;
-    }
-
-    & .warning {
-        color: red;
-        text-align: center;
-        font-size: 0.8rem;
-        margin: -2rem auto 1rem;
-    }
-
-    & .signUpButton {
-        display: block;
-        padding: 0.5rem 1rem;
-        background: $secondaryGreen;
-        border: 1px solid $secondaryGreen;
-        border-radius: 5px;
-        color: #000;
+    & .button {
         cursor: pointer;
-        transition: all 0.3s;
-        font-size: 1rem;
-        margin: 0 auto;
+        width: 100%;
 
-        &:hover {
-            background: $primaryGreen;
-        }
+        margin-top: 1rem;
+        padding: 0.8rem;
 
-        &:disabled {
-            background: transparent;
-            border: 1px solid $secondaryGreen;
-            color: $secondaryGreen;
-            cursor: no-drop;
-        }
-    }
-
-    & .backToLoginButton {
-        display: block;
         background: transparent;
-        color: #fff;
-        box-shadow: none;
-        cursor: pointer;
-        font-size: 0.8rem;
-        border: none;
-        padding: 0.5rem;
-        margin: 0.2rem auto;
+        border: 1px solid $paletteGreen2;
+        border-radius: 4px;
 
-        &::before {
-            content: '←';
-            margin: 0 0.5rem 0 -0.5rem;
-            font-size: 1rem;
-            transition: all 0.3s;
-        }
+        color: $paletteGreen2;
 
         &:hover {
-            background: transparent;
-            &::before {
-                margin: 0 1rem 0 -1.5rem;
-            }
+            background: $paletteGreen2;
+            color: $paletteGrey1;
         }
     }
 }
