--- a/src/components/PasswordRecovery/styles.module.scss
+++ b/src/components/PasswordRecovery/styles.module.scss
@@ -1,76 +1,66 @@
 @import '../../theme/palette.scss';
 
 .container {
+    position: relative;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+
+    width: 70%;
+    height: 100%;
+
     opacity: 0;
 
-    & .header {
-        display: flex;
-        height: 4rem;
-        padding: 1rem 3rem 1rem 1rem;
+    & .title {
+        margin: 2rem 0 1rem -2rem;
 
-        & .img {
-            width: 20%;
-            margin-right: 14%;
+        & img {
+            cursor: pointer;
+            margin-right: 1rem;
+
+            /* fucking svg has fucking few px bottom fucking padding */
+            position: relative;
+            top: 0.2rem;
         }
+    }
+
+    & .form {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+
+        width: 100%;
+        height: 70%;
 
         & p {
-            line-height: 2rem;
-            font-size: 1.5rem;
-            color: $secondaryGreen;
+            font-size: 0.8rem;
+            color: $paletteGrey3;
         }
     }
 
-    & form {
-        margin: -1.5rem 0 1rem;
-    }
-
-    & .submitButton {
-        display: block;
-        padding: 0.5rem 1rem;
-        background: $secondaryGreen;
-        border: 1px solid $secondaryGreen;
-        border-radius: 5px;
-        color: #000;
+    & .button {
         cursor: pointer;
-        transition: all 0.3s;
-        font-size: 1rem;
-        margin: 0 auto;
+        width: 100%;
+
+        padding: 0.8rem;
+
+        border-radius: 4px;
+        border: 1px solid $paletteGreen2;
+        background: transparent;
+
+        color: $paletteGreen2;
+        font-size: 0.8rem;
 
         &:hover {
-            background: $primaryGreen;
+            background: $paletteGreen2;
+            color: $paletteWhite;
         }
 
         &:disabled {
-            background: transparent;
-            border: 1px solid $secondaryGreen;
-            color: $secondaryGreen;
-            cursor: no-drop;
-        }
-    }
-
-    & .backToLoginButton {
-        display: block;
-        background: transparent;
-        color: #fff;
-        box-shadow: none;
-        cursor: pointer;
-        font-size: 0.8rem;
-        border: none;
-        padding: 0.5rem;
-        margin: 0.2rem auto;
-
-        &::before {
-            content: '←';
-            margin: 0 0.5rem 0 -0.5rem;
-            font-size: 1rem;
-            transition: all 0.3s;
-        }
-
-        &:hover {
-            background: transparent;
-            &::before {
-                margin: 0 1rem 0 -1.5rem;
-            }
+            cursor: not-allowed;
+            background: $paletteGrey1;
+            border: 1px solid $paletteGrey1;
+            color: $paletteGrey3;
         }
     }
 }
