--- a/src/components/Navbar/styles.module.scss
+++ b/src/components/Navbar/styles.module.scss
@@ -1,19 +1,115 @@
 @import '../../theme/palette.scss';
 
-.background {
+.containerClosed {
     position: fixed;
-    left: 0;
     top: 0;
+    left: 0;
+    z-index: 13;
 
-    width: 100%;
-    height: 100%;
-    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 
-    background-image: url('../../theme/assets/Materials/Registration_background.jpg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    filter: brightness(25%);
+    background: $paletteGrey2;
+    padding: 1rem 0;
+
+    min-height: 100%;
+    width: 5rem;
+
+    & .navigationContainer {
+        // border: 1px solid red;
+
+        & .logoContainer {
+            display: flex;
+            justify-content: center;
+
+            height: 3rem;
+            width: 3rem;
+
+            margin: 0 auto;
+
+            background: #000;
+            border-radius: 8px;
+
+            & img {
+                transform: scale(0.9);
+            }
+        }
+
+        & .balanceContainer {
+            display: flex;
+            flex-direction: column;
+
+            & p {
+                font-size: 0.7rem;
+                color: $paletteGrey3;
+                margin: 0 auto;
+            }
+
+            & .balance {
+                display: flex;
+                flex-wrap: nowrap;
+                justify-content: space-evenly;
+
+                color: $paletteGreen2;
+
+                font-size: 0.8rem;
+
+                & img {
+                    width: 0.8rem;
+                    height: 0.8rem;
+                    margin-right: 0.2rem;
+                }
+            }
+        }
+
+        & .navlink {
+            width: 100%;
+            height: 4rem;
+
+            border-top: 1px solid rgba(255, 255, 255, 0.122);
+
+            display: flex;
+            justify-content: center;
+
+            & img {
+                filter: brightness(40%);
+            }
+
+            &:hover {
+                background: linear-gradient(270deg, #49ae5166 11.67%, rgba(73, 174, 81, 0) 100%);
+
+                & img {
+                    filter: brightness(100%);
+                }
+            }
+
+            &:last-of-type {
+                border-bottom: 1px solid rgba(255, 255, 255, 0.122);
+            }
+        }
+
+        & .navlinkActive {
+            width: 100%;
+            height: 4rem;
+
+            border-top: 1px solid rgba(255, 255, 255, 0.122);
+            border-right: 2px solid $paletteGreen2;
+
+            display: flex;
+            justify-content: center;
+
+            background: linear-gradient(270deg, #49ae5166 11.67%, rgba(73, 174, 81, 0) 100%);
+
+            & img {
+                filter: brightness(100%);
+            }
+        }
+    }
+
+    & .functionalContainer {
+        background: green;
+    }
 }
 
 .containerOpened {
@@ -31,360 +127,6 @@
 
     min-height: 100%;
     width: 23%;
-
-    & .profileInfo {
-        cursor: pointer;
-        display: flex;
-        flex-wrap: nowrap;
-        justify-content: space-between;
-        align-items: center;
-        margin: 1rem;
-        padding: 0.3rem;
-        height: 3rem;
-        border-radius: 3px;
-        transition: all 0.3s;
-
-        & img {
-            width: 2.5rem;
-            height: 2.5rem;
-            // border: 1.5px solid goldenrod;
-            border-radius: 5px;
-        }
-
-        & .platinum {
-            animation: shine 3s infinite;
-        }
-
-        & .username {
-            height: 100%;
-            display: flex;
-            flex-direction: column;
-            margin-left: -3rem;
-
-            & p {
-                font-size: 1rem;
-                margin: 0;
-                height: 60%;
-            }
-
-            & .userStatus {
-                color: rgba(255, 255, 255, 0.502);
-                font-size: 0.8rem;
-                height: 40%;
-
-                & span {
-                    color: goldenrod;
-                }
-            }
-        }
-
-        & .balance {
-            height: 100%;
-            max-width: 8rem;
-            display: flex;
-            flex-direction: column;
-            border: 1px solid rgba(255, 255, 255, 0.502);
-            border-radius: 5px;
-            padding: 0.1rem 0.5rem;
-
-            & p {
-                font-size: 0.8rem;
-                margin: 0;
-                height: 50%;
-                color: rgba(255, 255, 255, 0.502);
-                text-align: center;
-            }
-
-            & .coins {
-                color: white;
-                display: flex;
-                flex-direction: row;
-                justify-content: space-around;
-                align-items: center;
-
-                & .coinImg {
-                    height: 1rem;
-                    width: 1rem;
-                    border: none;
-                    margin-right: 0.3rem;
-                }
-            }
-        }
-    }
-
-    & .navlink {
-        width: 100%;
-        color: white;
-        text-decoration: none;
-        text-transform: uppercase;
-        font-size: 1rem;
-        padding: 0 1rem;
-        height: 3.5rem;
-        line-height: 3.5rem;
-
-        border-top: 1px solid rgba(255, 255, 255, 0.122);
-
-        display: flex;
-        flex-direction: row;
-
-        &:last-of-type {
-            border-bottom: 1px solid rgba(255, 255, 255, 0.122);
-        }
-
-        &:hover {
-            background-image: linear-gradient(
-                90deg,
-                rgba(255, 255, 255, 0),
-                rgba(255, 255, 255, 0.122),
-                rgba(255, 255, 255, 0.247)
-            );
-        }
-
-        & .navitemIcon {
-            margin: 1rem;
-        }
-    }
-
-    & .navlinkActive {
-        width: 100%;
-        color: white;
-        text-decoration: none;
-        text-transform: uppercase;
-        font-size: 1rem;
-        padding: 0 1rem;
-        height: 3.5rem;
-        line-height: 3.5rem;
-        background-image: linear-gradient(
-            170deg,
-            rgba(255, 255, 255, 0),
-            rgba(255, 255, 255, 0.122),
-            rgba(255, 255, 255, 0.247)
-        );
-        border-left: 3px solid $secondaryGreen;
-        display: flex;
-        flex-direction: row;
-    }
-    & .logo {
-        cursor: pointer;
-        width: 8rem;
-        height: 2rem;
-        margin: 0 1.5rem;
-        background-image: url('../../theme/assets/Logo_nav.png');
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
-    }
-
-    & .controlButton {
-        cursor: pointer;
-
-        width: 100%;
-        color: white;
-        font-size: 1rem;
-        padding: 0 1rem;
-        height: 2.5rem;
-        line-height: 2.5rem;
-
-        display: flex;
-        flex-direction: row;
-
-        filter: brightness(50%);
-        transition: all 0.3s;
-
-        & .controlButtonIcon {
-            margin: 0.5rem 2rem 0.5rem 0;
-        }
-
-        &:hover {
-            filter: brightness(100%);
-        }
-
-        & .discordLogo {
-            width: 1.7rem;
-            margin: 0.5rem 2rem 0.5rem 0;
-        }
-    }
-}
-
-.containerClosed {
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 13;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-
-    background: #000000;
-    padding: 1rem 0;
-
-    min-height: 100%;
-    width: 5rem;
-
-    & .profileInfo {
-        cursor: pointer;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        align-items: center;
-        margin: 1rem;
-        padding: 0 0.3rem;
-        height: 3rem;
-        border-radius: 3px;
-        transition: all 0.3s;
-
-        & img {
-            width: 1.5rem;
-            height: 1.5rem;
-            // border: 1.5px solid goldenrod;
-            border-radius: 5px;
-        }
-
-        & .platinum {
-            animation: shine 3s infinite;
-        }
-
-        & .username {
-            display: flex;
-            flex-direction: column;
-            display: none;
-        }
-
-        & .balance {
-            display: flex;
-            flex-direction: column;
-            margin-top: 0.3rem;
-
-            & p {
-                display: none;
-            }
-
-            & .coins {
-                color: white;
-                display: flex;
-                flex-direction: row;
-                justify-content: space-around;
-                align-items: center;
-                font-size: 0.8rem;
-
-                & .coinImg {
-                    height: 0.8rem;
-                    width: 0.8rem;
-                    border: none;
-                    margin-right: 0.3rem;
-                }
-            }
-        }
-    }
-
-    & .navlink {
-        width: 100%;
-        color: white;
-        text-decoration: none;
-        text-transform: uppercase;
-        font-size: 1rem;
-        padding: 0 1rem;
-        height: 3.5rem;
-        line-height: 3.5rem;
-
-        border-top: 1px solid rgba(255, 255, 255, 0.122);
-
-        display: flex;
-        flex-direction: row;
-
-        & .navText {
-            display: none;
-        }
-
-        &:last-of-type {
-            border-bottom: 1px solid rgba(255, 255, 255, 0.122);
-        }
-
-        &:hover {
-            background-image: linear-gradient(
-                -130deg,
-                rgba(255, 255, 255, 0),
-                rgba(255, 255, 255, 0.122),
-                rgba(255, 255, 255, 0.247)
-            );
-        }
-
-        & .navitemIcon {
-            margin: 1rem 0 1rem 0.6rem;
-        }
-    }
-
-    & .navlinkActive {
-        width: 100%;
-        color: white;
-        text-decoration: none;
-        text-transform: uppercase;
-        font-size: 1rem;
-        padding: 0 1rem;
-        height: 3.5rem;
-        line-height: 3.5rem;
-        background-image: linear-gradient(
-            -130deg,
-            rgba(255, 255, 255, 0),
-            rgba(255, 255, 255, 0.122),
-            rgba(255, 255, 255, 0.247)
-        );
-        border-left: 3px solid $secondaryGreen;
-        display: flex;
-        flex-direction: row;
-    }
-    & .logo {
-        cursor: pointer;
-        width: 1.5rem;
-        height: 1.5rem;
-        margin: 0 auto;
-        background-image: url('../../theme/assets/logo_short.svg');
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
-    }
-
-    & .controlButton {
-        cursor: pointer;
-
-        width: 100%;
-        color: white;
-        font-size: 1rem;
-        padding: 0 1rem;
-        height: 2.5rem;
-        line-height: 2.5rem;
-
-        display: flex;
-        flex-direction: row;
-
-        filter: brightness(50%);
-        transition: all 0.3s;
-
-        & .controlText {
-            display: none;
-        }
-
-        & .controlButtonIcon {
-            margin: 0.5rem auto;
-        }
-
-        &:hover {
-            filter: brightness(100%);
-        }
-
-        & a {
-            width: 100%;
-
-            & .discordLogo {
-                width: 2rem;
-                position: relative;
-                top: 50%;
-                left: 50%;
-                transform: translate(-50%, -50%);
-            }
-        }
-    }
 }
 
 @keyframes shine {
