--- a/src/components/Navbar/styles.module.scss
+++ b/src/components/Navbar/styles.module.scss
@@ -32,6 +32,7 @@
             border-radius: 8px;
 
             & img {
+                cursor: pointer;
                 transform: scale(0.9);
             }
         }
@@ -43,7 +44,7 @@
             margin: 0.8rem auto;
 
             & p {
-                font-size: 0.7rem;
+                font-size: 0.8rem;
                 color: $paletteGrey3;
                 margin: 0.1rem auto;
             }
@@ -76,6 +77,10 @@
 
             & img {
                 filter: brightness(40%);
+            }
+
+            & span {
+                display: none;
             }
 
             &:hover {
@@ -128,7 +133,7 @@
             & button {
                 cursor: pointer;
 
-                padding: .5rem;
+                padding: 0.5rem;
 
                 border: 1px solid $paletteGreen2;
                 border-radius: 4px;
@@ -202,9 +207,16 @@
                 }
             }
         }
-
     }
 }
+
+//?____________________________________________________________________________
+//?____________________________________________________________________________
+//?____________________________________________________________________________
+//?________________________________OPENED SECTION______________________________
+//?____________________________________________________________________________
+//?____________________________________________________________________________
+//?____________________________________________________________________________
 
 .containerOpened {
     position: fixed;
@@ -216,11 +228,223 @@
     flex-direction: column;
     justify-content: space-between;
 
-    background: rgba(0, 0, 0, 0.933);
+    background: $paletteGrey1;
     padding: 1rem 0;
 
     min-height: 100%;
-    width: 23%;
+    width: 13.5rem;
+
+    //? ______TOP CONTAINER WITH NAVIGATION ITEMS__________
+    & .navigationContainer {
+        // padding: 0.5rem 0;
+
+        & .logoContainer {
+            display: flex;
+            justify-content: center;
+
+            height: 3rem;
+
+            margin: 0 auto;
+
+            background: transparent;
+
+            & img {
+                cursor: pointer;
+                transform: scale(1.2);
+            }
+        }
+
+        & .balanceContainer {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+
+            margin: 0.8rem auto;
+
+            & p {
+                font-size: 0.8rem;
+                color: $paletteGrey3;
+                margin: 0.1rem;
+            }
+
+            & .balance {
+                display: flex;
+                flex-wrap: nowrap;
+                justify-content: space-evenly;
+
+                color: $paletteGreen2;
+
+                font-size: 0.8rem;
+
+                & img {
+                    width: 0.8rem;
+                    height: 0.8rem;
+                    margin-right: 0.2rem;
+                }
+            }
+        }
+
+        & .navlink {
+            width: 100%;
+            height: 4rem;
+
+            border-top: 1px solid rgba(255, 255, 255, 0.122);
+
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+            line-height: 4rem;
+
+            & img {
+                filter: brightness(40%);
+                margin: 0 1rem;
+            }
+
+            & span {
+                display: inline-block;
+                text-decoration: none;
+                color: $paletteWhite;
+            }
+
+            &:hover {
+                background: linear-gradient(
+                    270deg,
+                    rgba(73, 174, 81, 0.4) 11.67%,
+                    rgba(73, 174, 81, 0) 100%
+                );
+
+                & img {
+                    filter: brightness(100%);
+                }
+            }
+
+            &:last-of-type {
+                border-bottom: 1px solid rgba(255, 255, 255, 0.122);
+            }
+        }
+
+        & .navlinkActive {
+            width: 100%;
+            height: 4rem;
+
+            border-top: 1px solid rgba(255, 255, 255, 0.122);
+            border-right: 2px solid $paletteGreen2;
+
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+
+            background: linear-gradient(
+                270deg,
+                rgba(73, 174, 81, 0.4) 11.67%,
+                rgba(73, 174, 81, 0) 100%
+            );
+
+            & img {
+                filter: brightness(100%);
+            }
+        }
+    }
+
+    //? ______BOTTOM CONTAINER WITH FUNCTIONAL BUTTONS__________
+    & .functionalContainer {
+        padding: 1rem 0;
+
+        & .bonusBlock {
+            width: 75%;
+            margin: 0 auto;
+
+            & button {
+                cursor: pointer;
+                width: 100%;
+
+                padding: 0.5rem;
+
+                border: 1px solid $paletteGreen2;
+                border-radius: 4px;
+                background: transparent;
+
+                color: $paletteGreen2;
+
+                &:hover {
+                    background: $paletteGreen2;
+                    color: $paletteWhite;
+                }
+            }
+        }
+
+        & .welcomeMessageBlock {
+            display: flex;
+            flex-direction: row;
+            justify-content: flex-start;
+
+            margin: 0.8rem 1rem;
+
+            & p {
+                font-size: 0.8rem;
+                color: $paletteGrey3;
+                margin: 0.1rem 0.2rem;
+            }
+
+            & .nickname {
+                color: $paletteWhite;
+            }
+        }
+
+        & .notificationBlock {
+            cursor: pointer;
+            display: flex;
+            justify-content: flex-start;
+            margin-top: 1.5rem;
+
+            & img {
+                filter: brightness(40%);
+                margin: 0 1rem;
+            }
+
+            & span {
+                filter: brightness(40%);
+                display: inline-block;
+            }
+
+            &:hover {
+                & img {
+                    filter: brightness(100%);
+                }
+
+                & span {
+                    filter: brightness(100%);
+                }
+            }
+        }
+
+        & .settingsBlock {
+            cursor: pointer;
+            display: flex;
+            justify-content: flex-start;
+            margin-top: 1.5rem;
+
+            & img {
+                filter: brightness(40%);
+                margin: 0 1rem;
+            }
+
+            & span {
+                filter: brightness(40%);
+                display: inline-block;
+            }
+
+            &:hover {
+                & img {
+                    filter: brightness(100%);
+                }
+
+                & span {
+                    filter: brightness(100%);
+                }
+            }
+        }
+    }
 }
 
 @keyframes shine {
