--- a/src/components/Dashboard/styles.module.scss
+++ b/src/components/Dashboard/styles.module.scss
@@ -1,94 +1,66 @@
 @import '../../theme/palette.scss';
 
 .mainContainer {
-    position: relative;
-    top: 0;
-    left: 0;
-
-    z-index: 12;
-
-    display: flex;
-    justify-content: space-around;
-
-    height: 100vh;
+    height: 100%;
     width: 100%;
 
-    & .contentContainer {
-        margin: 0.7rem;
+    padding: 0 0.5rem;
 
-        display: flex;
-        flex-direction: column;
+    display: grid;
+    grid-column-gap: 1rem;
+    grid-template-columns: 15rem 8.5rem auto 15rem 400px;
+    grid-template-rows: 15rem 6.5rem 300px;
 
-        &:first-of-type {
-            flex-grow: 1;
-            min-width: 23%;
+    & .userProgress {
+        border: 1px solid green;
+        border-radius: 8px;
+        grid-column: 1 / 3;
+        grid-row: 1 / 2;
+    }
 
-            & .contentBox {
-                width: 100%;
-                border-radius: 5px;
+    & .weeklyStats {
+        border: 1px solid green;
+        border-radius: 8px;
+        grid-column: 3 / 5;
+        grid-row: 1 / 2;
+    }
 
-                &:first-of-type {
-                    height: 48%;
-                    margin: 0.5rem 0;
-                    background: $primaryGrey;
-                    border: 1px solid $secondaryGrey;
-                    display: flex;
-                    flex-direction: column;
-                }
+    & .userFavorite {
+        border: 1px solid green;
+        border-radius: 8px;
+        grid-row: 1 / 3;
+    }
 
-                &:last-of-type {
-                    height: 48%;
-                    margin: 0.5rem 0;
-                    background: $primaryGrey;
-                    border: 1px solid $secondaryGrey;
-                }
-            }
-        }
-        &:nth-of-type(2) {
-            flex-grow: 2;
-            min-width: 38%;
+    & .invites {
+        border: 1px solid green;
+        border-radius: 8px;
+        grid-row: 2 /3;
+        grid-column: 1 / 3;
+    }
 
-            & .contentBox {
-                width: 100%;
-                border-radius: 5px;
+    & .dailyBonus {
+        border: 1px solid green;
+        border-radius: 8px;
+        grid-row: 2 /3;
+        grid-column: 3 / 5;
+    }
 
-                &:first-of-type {
-                    height: 48%;
-                    margin: 0.5rem 0;
-                    background: $primaryGrey;
-                    border: 1px solid $secondaryGrey;
-                }
+    & .userGoal {
+        border: 1px solid green;
+        border-radius: 8px;
+        grid-row: 3;
+        grid-column: 1;
+    }
 
-                &:last-of-type {
-                    height: 48%;
-                    margin: 0.5rem 0;
-                    background: $primaryGrey;
-                    border: 1px solid $secondaryGrey;
-                }
-            }
-        }
-        &:last-of-type {
-            flex-grow: 1;
-            min-width: 400px;
+    & .userRecommended {
+        border: 1px solid green;
+        border-radius: 8px;
+        grid-row: 3;
+        grid-column: 2 / 5;
+    }
 
-            & .contentBox {
-                width: 100%;
-                border-radius: 5px;
-
-                &:first-of-type {
-                    height: 48%;
-                    margin: 0.5rem 0;
-                    background: $primaryGrey;
-                    border: 1px solid $secondaryGrey;
-                }
-
-                &:last-of-type {
-                    height: 48%;
-                    margin: 0.5rem 0;
-                    min-height: 300px;
-                    min-width: 400px;
-                }
-            }
-        }
+    & .ad {
+        border: 1px solid green;
+        border-radius: 8px;
     }
 }
