--- a/src/components/Dashboard/styles.module.scss
+++ b/src/components/Dashboard/styles.module.scss
@@ -9,58 +9,82 @@
     display: grid;
     grid-column-gap: 1rem;
     grid-template-columns: 15rem 8.5rem auto 15rem 400px;
-    grid-template-rows: 15rem 6.5rem 300px;
+    grid-template-rows: 14rem 6rem 330px;
+
+    & .title {
+        margin: 0.5rem 2rem;
+    }
 
     & .userProgress {
-        border: 1px solid green;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
         border-radius: 8px;
         grid-column: 1 / 3;
         grid-row: 1 / 2;
     }
 
     & .weeklyStats {
-        border: 1px solid green;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
         border-radius: 8px;
         grid-column: 3 / 5;
         grid-row: 1 / 2;
     }
 
     & .userFavorite {
-        border: 1px solid green;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
         border-radius: 8px;
         grid-row: 1 / 3;
     }
 
     & .invites {
-        border: 1px solid green;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
         border-radius: 8px;
         grid-row: 2 /3;
         grid-column: 1 / 3;
     }
 
     & .dailyBonus {
-        border: 1px solid green;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
         border-radius: 8px;
         grid-row: 2 /3;
         grid-column: 3 / 5;
     }
 
     & .userGoal {
-        border: 1px solid green;
+        margin: 1rem 0 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
         border-radius: 8px;
         grid-row: 3;
         grid-column: 1;
     }
 
     & .userRecommended {
-        border: 1px solid green;
+        margin: 1rem 0 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
         border-radius: 8px;
         grid-row: 3;
         grid-column: 2 / 5;
     }
 
     & .ad {
+        margin: 1rem 0 0;
         border: 1px solid green;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
         border-radius: 8px;
     }
 }
