--- a/src/components/Select/styles.module.scss
+++ b/src/components/Select/styles.module.scss
@@ -32,10 +32,10 @@
     & .dropdown {
         position: relative;
 
-        max-height: 8rem;
+        max-height: 9rem;
         overflow-y: scroll;
 
-        padding: 0.5rem;
+        padding: 0.2rem 0.5rem;
         margin: 0.5rem 0;
 
         border: 1px solid $paletteGrey3;
