--- a/src/components/MarketItem/styles.module.scss
+++ b/src/components/MarketItem/styles.module.scss
@@ -1,118 +1,122 @@
 @import '../../theme/palette.scss';
 
 .container {
-    cursor: pointer;
+    height: 100%;
+    width: 100%;
+
     display: flex;
     flex-direction: column;
-    flex-wrap: nowrap;
-    justify-content: space-between;
 
-    height: 49%;
-    width: 28%;
-    min-width: 201px;
-    min-height: 250px;
-    margin: 0.8rem 1%;
+    border-radius: 8px;
 
-    border-radius: 5px;
-    border: 1px solid $secondaryGrey;
+    background: $paletteGrey2;
 
-    animation: appear 300ms;
+    & .itemImg {
+        width: 100%;
+        height: 58%;
 
-    & .priceContainer {
+        border-radius: 8px 8px 0 0;
+    }
+
+    & .title {
+        margin: 0.5rem 1rem;
+
+        font-size: 1.2rem;
+    }
+
+    & .itemInfo {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: 0.5rem 7%;
 
-        height: 15%;
-        background: $secondaryGrey;
-        border-radius: 5px 5px 0 0;
+        margin-left: 1rem;
 
-        & .gameLogo {
-            margin-top: -0.3rem;
-            width: 27%;
-        }
+        font-size: 0.7rem;
+        color: $paletteGrey3;
 
-        & p {
-            font-size: 1.2rem;
+        & img {
+            width: 2rem;
+            height: 2rem;
+            padding: 0.2rem;
 
-            & img {
-                height: 0.8rem;
-                margin-right: 0.2rem;
-            }
+            margin-right: 0.5rem;
+
+            background: #000;
         }
     }
 
-    & .infoContainer {
+    & .actionsContainer {
         display: flex;
-        flex-direction: column;
         justify-content: space-between;
 
-        background-size: cover;
-        background-position: center;
-        height: 85%;
-        min-height: 230px;
-        border-radius: 0 0 5px 5px;
+        margin: 0.5rem 1rem;
 
-        & .label {
-            background: $secondaryGreen;
-            clip-path: polygon(100% 0, 55% 0, 100% 100%);
-            width: 100%;
-            min-height: 100px;
-            text-align: right;
-            padding: 0.5rem 0.2rem;
+        & .price {
+            display: flex;
+            align-items: center;
+            color: $paletteGreen1;
 
-            & .labelTitle {
-                font-size: 0.7rem;
-            }
+            max-width: 45%;
+            padding: 0.3rem 0.5rem;
 
-            & .timer {
-                font-size: 0.8rem;
-                padding: 0.2rem;
+            background: $paletteGrey1;
+
+            border-radius: 4px;
+
+            font-size: 0.9rem;
+
+            & img {
+                width: 0.8rem;
+                margin: 0 0.2rem 0.2rem 0;
             }
         }
 
-        & .info {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: space-evenly;
+        & .button {
+            cursor: pointer;
+            width: 50%;
+            padding: 0.3rem 0.5rem;
 
-            height: 50%;
-            padding: 2rem 0 0.5rem;
-            background-image: linear-gradient(transparent, black 40%);
-            border-radius: 0 0 5px 5px;
+            text-align: center;
 
-            & .itemName {
-                text-align: center;
+            color: $paletteGreen1;
 
-                &:last-of-type {
-                    width: 60%;
-                    height: 1rem;
-                    margin: 0.2rem 0 0.4rem;
-                    text-overflow: ellipsis;
-                    white-space: nowrap;
-                    overflow: hidden;
-                    font-size: 0.8rem;
-                }
+            border: 1px solid $paletteGreen1;
+            border-radius: 4px;
+
+            &:hover {
+                background: $paletteGreen1;
+                color: $paletteWhite;
             }
+        }
+    }
+}
 
-            & .actionButton {
-                cursor: pointer;
-                width: 45%;
-                border: 1px solid #fff;
-                background: transparent;
-                color: #fff;
-                height: 1.8rem;
-                border-radius: 5px;
-                font-weight: 600;
-                font-size: 0.8rem;
+.favoriteButton {
+    cursor: pointer;
 
-                &:hover {
-                    border: 1px solid $secondaryGreen;
-                    background: $secondaryGreen;
-                }
-            }
+    position: relative;
+    top: 0.5rem;
+    left: 0.5rem;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    width: 1.5rem;
+    height: 1.5rem;
+
+    padding: 0.2rem;
+    margin-bottom: -1.5rem;
+
+    border: 1px solid $paletteGrey3;
+    border-radius: 4px;
+
+    &:hover {
+        background: $paletteGreen2;
+        border: 1px solid $paletteGreen2;
+
+        & img {
+            filter: brightness(0) invert(1);
         }
     }
 }
