--- a/src/components/Dashboard/styles.module.scss
+++ b/src/components/Dashboard/styles.module.scss
@@ -9,7 +9,7 @@
     display: grid;
     grid-column-gap: 1rem;
     grid-row-gap: 0.5rem;
-    grid-template-columns: 15rem 8.5rem auto 15rem 400px;
+    grid-template-columns: 15rem auto auto 15rem 400px;
     grid-template-rows: 14rem 6rem 330px;
 
     & .title {
@@ -80,7 +80,6 @@
 
     & .ad {
         margin: 1rem 0 0;
-        border: 1px solid green;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
