--- a/src/components/Market/styles.module.scss
+++ b/src/components/Market/styles.module.scss
@@ -1,111 +1,19 @@
 @import '../../theme/palette.scss';
 
-.mainContainer {
-    position: relative;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    padding-top: 1rem;
-    margin: 1rem;
-    z-index: 12;
+.container {
+    height: 100%;
 
-    & .marketContainer {
-        width: calc(99% - 400px);
+    padding: 1rem 0.5rem;
 
-        & .controlsContainer {
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
+    display: grid;
+    grid-template-columns: auto 400px;
+    grid-column-gap: 1rem;
 
-            width: 100%;
-            height: 2.5rem;
+    & .itemsContainer {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
 
-            & .tabsContainer {
-                display: flex;
-                flex-wrap: nowrap;
-                justify-content: space-between;
-                width: 30%;
-                height: 100%;
-
-                & .tabs {
-                    cursor: pointer;
-                    display: inline-block;
-                    height: 100%;
-                    width: 49%;
-                    background: $primaryGrey;
-                    color: $lightGrey;
-                    text-align: center;
-                    line-height: 2.5rem;
-                    border: 1px solid $secondaryGrey;
-                    border-radius: 5px 5px 0 0;
-                    border-bottom: none;
-                    filter: brightness(50%);
-                    transition: all 0s;
-                }
-
-                & .active {
-                    height: 101%;
-                    z-index: 14;
-                    filter: brightness(100%);
-                }
-            }
-
-            & .searchContainer {
-                display: flex;
-                justify-content: flex-end;
-
-                & input {
-                    border-radius: 5px 0 0 5px;
-                    background: $primaryGrey;
-                    color: $secondaryGreen;
-                    padding-left: 1rem;
-                    font-size: 1.2rem;
-                    border: 1px solid grey;
-                    height: 2.2rem;
-                    width: 40%;
-                    border-right: none;
-
-                    &:focus {
-                        width: 90%;
-                    }
-                }
-
-                & .searchIcon {
-                    width: 5%;
-                    border-radius: 0 5px 5px 0;
-                    background: $primaryGrey;
-                    color: $secondaryGrey;
-                    border: 1px solid grey;
-                    border-left: none;
-                    height: 2.2rem;
-                    padding-right: 0.5rem;
-                }
-            }
-        }
-
-        & .marketTab {
-            padding-top: 1rem;
-            width: 100%;
-            height: 87vh;
-            background: $primaryGrey;
-            border: 1px solid $secondaryGrey;
-            border-radius: 0 0 5px 5px;
-            display: flex;
-            justify-content: space-evenly;
-            flex-wrap: wrap;
-            overflow-y: scroll;
-            overflow-x: hidden;
-
-            & .empty {
-                font-size: 1.5rem;
-                margin: 1rem;
-                color: $secondaryGreen;
-                width: 100%;
-                height: 2rem;
-                text-align: center;
-                position: relative;
-                top: 45%;
-            }
-        }
+        border: 1px solid green;
     }
 }
