market by game filter

--- a/src/components/MarketItem/styles.module.scss
+++ b/src/components/MarketItem/styles.module.scss
@@ -56,8 +56,8 @@
         }
 
         & p {
-            overflow-y: scroll;
-            height: 2rem;
+            overflow-y: hidden;
+            height: 1.7rem;
         }
     }
 
