--- a/src/components/Market/styles.module.scss
+++ b/src/components/Market/styles.module.scss
@@ -1,19 +1,66 @@
 @import '../../theme/palette.scss';
 
 .container {
-    height: 100%;
+    height: 700px;
 
     padding: 1rem 0.5rem;
 
     display: grid;
     grid-template-columns: auto 400px;
+    grid-template-rows: 50px 650px;
     grid-column-gap: 1rem;
 
+    & .switchButtonsContainer {
+        grid-row: 1;
+        grid-column: 1 / 3;
+
+        display: flex;
+        justify-content: flex-start;
+        align-items: flex-end;
+
+        height: 100%;
+        padding: 0 1rem;
+
+        & .switchButton {
+            cursor: pointer;
+
+            height: 85%;
+
+            padding: 0 5rem;
+            margin-right: -1rem;
+
+            font-size: 0.9rem;
+            line-height: 40px;
+            color: $paletteGrey3;
+
+            border: 1px solid $paletteGrey3;
+            border-radius: 4px 4px 0 0;
+
+            &:hover {
+                background: $paletteGreen2;
+                border: 1px solid $paletteGreen2;
+                color: $paletteWhite;
+            }
+
+            &.active {
+                background: $paletteGreen2;
+                border: 1px solid $paletteGreen2;
+                color: $paletteWhite;
+                z-index: 2;
+                height: 90%;
+            }
+        }
+    }
+
     & .itemsContainer {
+        grid-row: 2;
+
         display: flex;
         flex-wrap: wrap;
         justify-content: space-evenly;
 
-        border: 1px solid green;
+        max-height: 650px;
+
+        overflow-y: scroll;
     }
 }
