--- a/src/theme/index.scss
+++ b/src/theme/index.scss
@@ -22,11 +22,11 @@ body {
     overflow: hidden;
 
     ::-webkit-scrollbar {
-        width: 4px;
+        width: 3px;
     }
 
     ::-webkit-scrollbar-thumb {
-        background: $secondaryGreen;
+        background: $paletteGrey2;
         border-radius: 4px;
     }
     ::-webkit-scrollbar-track {
