--- a/src/components/LeaderboardInstruments/styles.module.scss
+++ b/src/components/LeaderboardInstruments/styles.module.scss
@@ -1,136 +1,61 @@
 @import '../../theme/palette.scss';
 
 .container {
+    height: 650px;
     width: 400px;
 
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
     & .filtersContainer {
-        background: $primaryGrey;
-        border-radius: 5px;
+        display: grid;
+        grid-template-columns: 50% 50%;
+        grid-template-rows: 50px 50px 50px;
+        grid-row-gap: 1rem;
+        grid-column-gap: 0.5rem;
 
-        & div {
-            &:first-of-type {
-                border-radius: 5px 5px 0 0;
-            }
-            &:last-of-type {
-                border-radius: 0 0 5px 5px;
-            }
-        }
+        height: 320px;
+        padding: 1rem;
 
-        & .title {
-            width: 100%;
-            padding: 0 1rem;
-            height: 2.5rem;
-            font-size: 0.8rem;
-            line-height: 2.5rem;
-            color: $primaryGreen;
-            background: $secondaryGrey;
-        }
+        background: $paletteGrey2;
 
-        & .filter {
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
+        border-radius: 8px;
 
-            cursor: pointer;
-            border-top: 1px solid black;
-            border-bottom: 1px solid black;
+        & .searchBar {
+            grid-column: 1 / 3;
+            grid-row: 1;
 
             width: 100%;
             padding: 0 1rem;
-            height: 2.5rem;
-            font-size: 0.8rem;
-            line-height: 2.5rem;
-            color: $lightGrey;
 
-            & p {
-                display: flex;
-                justify-content: space-between;
+            background: $paletteGrey1;
 
-                &::after {
-                    content: '▼';
-                    color: $lightGrey;
-                }
-            }
+            border: none;
+            border-radius: 4px;
 
-            & .inputsContainer {
-                display: none;
-                opacity: 0;
-            }
+            color: $paletteGrey3;
+        }
 
-            &:last-of-type {
-                border-bottom: none;
-            }
+        & .gameSelect {
+            grid-column: 1 / 3;
+            grid-row: 2;
 
-            &.active {
-                height: auto;
+            width: 100%;
+        }
 
-                & p {
-                    display: flex;
-                    justify-content: space-between;
+        & .typeSelect {
+            grid-column: 1;
+            grid-row: 3;
 
-                    &::after {
-                        content: '▼';
-                        color: $lightGrey;
-                        transform: rotate(180deg);
-                    }
-                }
+            width: 100%;
+        }
 
-                & .inputsContainer {
-                    display: block;
-                    opacity: 1;
+        & .priceSort {
+            grid-column: 2;
+            grid-row: 3;
 
-                    & label {
-                        font-size: 1rem;
-                        color: $secondaryGreen;
-                        display: inline-block;
-                        line-height: 1rem;
-                    }
-
-                    & input[type='radio'] {
-                        width: 5%;
-                        cursor: pointer;
-                        transition: all 0.3s;
-                        display: inline-block;
-                        margin: 0.5rem;
-                        background: #000;
-                    }
-
-                    & input[type='text'] {
-                        background: none;
-                        border: 1px solid $secondaryGreen;
-                        border-radius: 5px;
-                        padding: 0.3rem 0;
-                        color: $secondaryGreen;
-                        font-size: 1rem;
-                        width: 20%;
-                        text-align: center;
-                        margin: 0 5.6rem;
-                    }
-
-                    & input[type='range'] {
-                        -webkit-appearance: none;
-                        background: transparent;
-                        width: 100%;
-                        padding: 0 1rem;
-
-                        &::-webkit-slider-thumb {
-                            cursor: pointer;
-                            border-radius: 360px;
-                            background: $secondaryGreen;
-                            border: 1px solid $lightGrey;
-                            -webkit-appearance: none;
-                            width: 1rem;
-                            height: 1rem;
-                            margin-top: -0.45rem;
-                        }
-
-                        &::-webkit-slider-runnable-track {
-                            height: 2px;
-                            background: $secondaryGreen;
-                        }
-                    }
-                }
-            }
+            width: 100%;
         }
     }
 
@@ -138,9 +63,6 @@
         height: 300px;
         width: 100%;
 
-        margin: 2rem auto;
-        border-radius: 5px;
-        min-width: 400px;
-        min-height: 300px;
+        border: 1px solid green;
     }
 }
