--- a/src/components/MarketInstruments/styles.module.scss
+++ b/src/components/MarketInstruments/styles.module.scss
@@ -10,7 +10,7 @@
 
     & .filtersContainer {
         display: grid;
-        grid-template-columns: auto auto;
+        grid-template-columns: 50% 50%;
         grid-template-rows: 50px 50px 50px;
         grid-row-gap: 1rem;
         grid-column-gap: 0.5rem;
