--- a/src/components/MarketRecomendations/styles.module.scss
+++ b/src/components/MarketRecomendations/styles.module.scss
@@ -1,6 +1,8 @@
 @import '../../theme/palette.scss';
 
 .recomendations {
+    height: 100%;
+
     display: flex;
     justify-content: space-evenly;
     margin: 0;
