--- a/src/components/UserWeeklyStats/styles.module.scss
+++ b/src/components/UserWeeklyStats/styles.module.scss
@@ -7,7 +7,9 @@
     background: $paletteGrey2;
 
     border-radius: 8px;
+    padding-right: 1rem;
 
     display: flex;
-    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-end;
 }
