--- a/src/components/DailyBonus/styles.module.scss
+++ b/src/components/DailyBonus/styles.module.scss
@@ -2,22 +2,31 @@
 
 .container {
     display: grid;
-    grid-template-columns: 8rem auto 6rem;
+    grid-template-columns: auto auto auto auto;
+    grid-template-rows: auto auto;
+    grid-column-gap: 0.5rem;
+    align-items: center;
 
     width: 100%;
-    height: 64%;
-    padding: 1rem;
+    height: 100%;
+    padding: 0.5rem 1rem 0.2rem;
 
     background: $paletteGrey2;
 
     border-radius: 4px;
 
     & .text {
+        grid-column: 1 / 3;
+        grid-row: 1;
+
         font-size: 0.7rem;
         color: $paletteGrey3;
     }
 
     & .timer {
+        grid-column: 3 / 5;
+        grid-row: 1;
+
         font-size: 1.5rem;
 
         display: flex;
@@ -30,16 +39,14 @@
 
         & .timerItem {
             text-align: center;
-
-            & .timerText {
-                font-size: 0.7rem;
-                color: $paletteGrey3;
-            }
         }
     }
 
     & .button {
         cursor: pointer;
+
+        grid-column: 2 / 4;
+        grid-row: 2;
 
         height: 2.1rem;
         width: 100%;
