--- a/src/components/Dashboard/styles.module.scss
+++ b/src/components/Dashboard/styles.module.scss
@@ -1,7 +1,7 @@
 @import '../../theme/palette.scss';
 
 .mainContainer {
-    height: 100%;
+    height: 600px;
     width: 100%;
 
     padding: 0 0.5rem;
@@ -9,8 +9,10 @@
     display: grid;
     grid-column-gap: 1rem;
     grid-row-gap: 0.5rem;
-    grid-template-columns: 15rem auto auto 15rem 400px;
-    grid-template-rows: 14rem 6rem 330px;
+    grid-template-columns: 15rem auto auto 135px 250px;
+    grid-template-rows: auto auto 330px;
+
+    border: 1px solid red;
 
     & .title {
         margin: 0.5rem 2rem;
@@ -22,7 +24,7 @@
         justify-content: space-between;
         border-radius: 8px;
         grid-column: 1 / 3;
-        grid-row: 1 / 2;
+        grid-row: 1 / 3;
     }
 
     & .weeklyStats {
@@ -31,15 +33,7 @@
         justify-content: space-between;
         border-radius: 8px;
         grid-column: 3 / 5;
-        grid-row: 1 / 2;
-    }
-
-    & .userFavorite {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        border-radius: 8px;
-        grid-row: 1 / 3;
+        grid-row: 1 /3;
     }
 
     & .invites {
@@ -47,8 +41,8 @@
         flex-direction: column;
         justify-content: space-between;
         border-radius: 8px;
-        grid-row: 2 /3;
-        grid-column: 1 / 3;
+        grid-row: 2;
+        grid-column: 5;
     }
 
     & .dailyBonus {
@@ -56,8 +50,8 @@
         flex-direction: column;
         justify-content: space-between;
         border-radius: 8px;
-        grid-row: 2 /3;
-        grid-column: 3 / 5;
+        grid-row: 1;
+        grid-column: 5;
     }
 
     & .userGoal {
@@ -75,14 +69,19 @@
         justify-content: space-between;
         border-radius: 8px;
         grid-row: 3;
-        grid-column: 2 / 5;
+        grid-column: 2 / 4;
     }
 
     & .ad {
+        grid-row: 3;
+        grid-column: 4 / 6;
+
         margin: 1rem 0 0;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
         border-radius: 8px;
+
+        border: 1px solid green;
     }
 }
