--- a/src/components/UserProgress/styles.module.scss
+++ b/src/components/UserProgress/styles.module.scss
@@ -2,13 +2,14 @@
 
 .container {
     width: 100%;
-    height: 85%;
+    height: 90%;
 
     padding: 0.7rem;
 
     display: grid;
-    grid-template-columns: 8.3rem 7.3rem 7.3rem;
-    grid-template-rows: 3.8rem 3.8rem 3.8rem;
+    grid-template-columns: 9rem 9rem 9rem;
+    grid-template-rows: 4.2rem 4.2rem 4.2rem;
+    grid-column-gap: 1rem;
 
     background: $paletteGrey2;
 
@@ -20,8 +21,8 @@
 
         & .medal {
             position: relative;
-            top: -85%;
-            left: 37%;
+            top: -83%;
+            left: 37.5%;
         }
     }
 
