--- a/src/components/UserProgress/styles.module.scss
+++ b/src/components/UserProgress/styles.module.scss
@@ -21,8 +21,9 @@
 
         & .medal {
             position: relative;
-            top: -83%;
-            left: 37.5%;
+            transform: scale(0.8);
+            top: -88%;
+            left: 33.5%;
         }
     }
 
