--- a/src/components/Dashboard/styles.module.scss
+++ b/src/components/Dashboard/styles.module.scss
@@ -1,16 +1,18 @@
 @import '../../theme/palette.scss';
 
 .mainContainer {
-    height: 600px;
+    height: 650px;
     width: 100%;
 
-    padding: 0 0.5rem 0.2rem;
+    padding: 4rem 0.5rem 0.2rem;
 
     display: grid;
     grid-column-gap: 1rem;
-    grid-row-gap: 0.2rem;
+    grid-row-gap: 1.5rem;
     grid-template-columns: 15rem auto auto 135px 250px;
     grid-template-rows: auto auto 330px;
+    align-items: center;
+    align-content: center;
 
     & .title {
         margin: 0.5rem 2rem;
@@ -23,6 +25,7 @@
         border-radius: 8px;
         grid-column: 1 / 3;
         grid-row: 1 / 3;
+        height: 100%;
     }
 
     & .weeklyStats {
@@ -32,6 +35,7 @@
         border-radius: 8px;
         grid-column: 3 / 5;
         grid-row: 1 /3;
+        height: 100%;
     }
 
     & .invites {
@@ -41,6 +45,7 @@
         border-radius: 8px;
         grid-row: 2;
         grid-column: 5;
+        height: 100%;
     }
 
     & .dailyBonus {
@@ -50,6 +55,7 @@
         border-radius: 8px;
         grid-row: 1;
         grid-column: 5;
+        height: 100%;
     }
 
     & .userGoal {
@@ -59,6 +65,7 @@
         border-radius: 8px;
         grid-row: 3;
         grid-column: 1;
+        height: 100%;
     }
 
     & .userRecommended {
@@ -68,6 +75,7 @@
         border-radius: 8px;
         grid-row: 3;
         grid-column: 2 / 4;
+        height: 100%;
     }
 
     & .ad {
