--- a/src/components/History/styles.module.scss
+++ b/src/components/History/styles.module.scss
@@ -1,13 +1,13 @@
 @import '../../theme/palette.scss';
 
 .container {
-    height: 650px;
+    height: 700px;
 
-    padding: 0 0.5rem;
+    padding: 2rem 0.5rem 0;
 
     display: grid;
     grid-template-columns: auto 400px;
-    grid-template-rows: 50px 600px;
+    grid-template-rows: 50px 650px;
     grid-column-gap: 1rem;
 
     & .switchButtonsContainer {
@@ -67,8 +67,9 @@
     & .statsContainer {
         display: grid;
         grid-template-columns: 50% 50%;
-        grid-template-rows: 5% 45% 5% 45%;
+        grid-template-rows: 5% 45% 6% 44%;
         grid-column-gap: 0.5rem;
+        align-content: center;
 
         & .firstChart {
             grid-row: 2;
@@ -110,7 +111,7 @@
             grid-row: 1;
             grid-column: 1 / 3;
 
-            line-height: 1.2rem;
+            line-height: 1.5rem;
             font-size: 0.9rem;
 
             padding: 0 1rem;
@@ -120,8 +121,8 @@
             grid-row: 3;
             grid-column: 1;
 
-            line-height: 2rem;
-            font-size: 0.8rem;
+            line-height: 2.5rem;
+            font-size: 0.9rem;
 
             padding: 0 1rem;
         }
@@ -130,8 +131,8 @@
             grid-row: 3;
             grid-column: 2;
 
-            line-height: 2rem;
-            font-size: 0.8rem;
+            line-height: 2.5rem;
+            font-size: 0.9rem;
 
             padding: 0 1rem;
         }
